# wincode-dynamic

./: Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
wincode-dynamic/: Cargo.toml
wincode-dynamic-derive/: Cargo.toml
wincode-dynamic-derive/src/: lib.rs  wincode_dynamic.rs
wincode-dynamic/src/: compile_fail.rs  lib.rs  ty.rs  value.rs  wincode_extra.rs
