[package]
name = "wincode-dynamic-derive"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
quote = "1.0.45"
proc-macro2 = "1.0.106"
syn = { version = "2.0.117", features = ["extra-traits", "visit-mut", "visit"] }
