
[package]
name = "wincode-dynamic"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
wincode = { version = "0.5.5", features = ["derive"] }
wincode-dynamic-derive = { path = "../wincode-dynamic-derive" }

[dev-dependencies]
proptest = "1.11.0"
proptest-derive = "0.8.0"
