[package]
name = "wincode-dynamic"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "serialize", "deserialize", "bincode"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]

[features]
default = ["std"]
std = ["wincode/std"]
derive = ["dep:wincode-dynamic-derive"]

[dependencies]
wincode = { version = "0.5.5", features = ["alloc", "derive"], default-features = false }
wincode-dynamic-derive = { path = "../wincode-dynamic-derive", optional = true, version = "0.1.0" }

[dev-dependencies]
proptest = "1.11.0"
proptest-derive = "0.8.0"
wincode-dynamic = { path = ".", features = ["derive"] }
